--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:title="Breaking News"
+        android:id="@+id/breakingNewsFragment"
         android:icon="@drawable/ic_breaking_news"/>
 
     <item android:title="Favorites"
+        android:id="@+id/favoritesFragment"
         android:icon="@drawable/ic_favorite"/>
 
     <item android:title="Search"
+        android:id="@+id/searchFragment"
         android:icon="@drawable/ic_search"/>
 </menu>
